<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondi"
    tools:context="com.example.ayose.comandasfina.MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/logo4"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:textColor="#151515"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:text="@string/bebidas"
        android:id="@+id/beb"
        android:layout_marginTop="180dp"
        android:textSize="20dp"
        android:textStyle="italic|bold"
        android:paddingRight="180dp"
        android:background="@drawable/text"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="200dp"
        android:layout_height="50dp"
        android:src="@drawable/drink"
        />
    <Button
        android:textColor="#151515"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:text="@string/primero"
        android:id="@+id/prim"
        android:layout_marginTop="240dp"
        android:textSize="20dp"
        android:textStyle="italic|bold"
        android:paddingRight="120dp"
        android:background="@drawable/text"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_marginTop="235dp"
        android:layout_marginLeft="200dp"
        android:layout_height="50dp"
        android:src="@drawable/soup"
        />
    <Button
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:text="@string/segundo"
        android:id="@+id/sec"
        android:layout_marginTop="300dp"
        android:textSize="20dp"
        android:paddingRight="100dp"
        android:textStyle="italic|bold"
        android:contextClickable="true"
        android:background="@drawable/text"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#151515"

        />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="200dp"
        android:layout_height="50dp"
        android:src="@drawable/meat"
        />
    <Button
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:text="@string/postre"
        android:id="@+id/postre"
        android:paddingRight="170dp"
        android:layout_marginTop="360dp"
        android:textSize="20dp"
        android:textStyle="italic|bold"
        android:background="@drawable/text"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#151515"

        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_marginTop="361dp"
        android:layout_marginLeft="200dp"
        android:layout_height="50dp"
        android:src="@drawable/icecream"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/resumen"
        android:id="@+id/fin"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="80dp"
        android:textSize="20dp"
        android:visibility="invisible"
        android:textStyle="italic|bold"
        android:background="@drawable/text"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#151515"

        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#151515"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
