<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="700dp" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/fondi"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ayose.comandasfina.Resumen">

        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:text="@string/bebidas"
            android:textColor="#4D4646"
            android:textStyle="italic|bold"
            android:textAllCaps="true"
            android:background="@drawable/text"
            android:textSize="30dp"
            android:visibility="invisible"
            android:paddingLeft="110dp"
            android:layout_marginTop="55dp"
            android:paddingTop="10dp"
            android:id="@+id/t0" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:textColor="#151515"
            android:textStyle="italic|bold"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginTop="105dp"
            android:paddingTop="10dp"
            android:id="@+id/t01" />
        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            android:text="@string/primero"
            android:textColor="#4D4646"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:paddingLeft="60dp"
            android:layout_marginTop="170dp"
            android:paddingTop="10dp"
            android:id="@+id/t1" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:textColor="#151515"
            android:textStyle="italic|bold"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginTop="220dp"
            android:paddingTop="10dp"
            android:id="@+id/t2" />
        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:text="@string/segundo"
            android:textColor="#4D4646"
            android:visibility="invisible"
            android:textAllCaps="true"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:textSize="30dp"
            android:layout_marginTop="285dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:id="@+id/t3" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:textColor="#151515"
            android:textAlignment="center"
            android:textStyle="italic|bold"
            android:textSize="30dp"
            android:layout_marginTop="335dp"
            android:paddingTop="10dp"
            android:id="@+id/t4" />


        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:text="@string/postre"
            android:textAllCaps="true"
            android:textColor="#4D4646"
            android:layout_marginTop="400dp"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:textSize="30dp"
            android:visibility="invisible"
            android:paddingLeft="105dp"
            android:paddingTop="10dp"
            android:id="@+id/t5" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:textStyle="italic|bold"
            android:textSize="30dp"
            android:textColor="#151515"
            android:textAlignment="center"
            android:layout_marginTop="450dp"
            android:paddingTop="10dp"
            android:id="@+id/t52" />

    </RelativeLayout>
</ScrollView>