<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/fondi"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ayose.comandasfina.Primer">

    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/primero"
        android:textAllCaps="true"
        android:textColor="#4D4646"
        android:textStyle="italic|bold"
        android:background="@drawable/text"
        android:textSize="30dp"
        android:paddingLeft="60dp"
        android:paddingTop="10dp"
        android:id="@+id/textView" />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

        <Button
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/sopa"
            android:textSize="22dp"
            android:textStyle="italic|bold"
            android:textColor="#151515"
            android:layout_marginTop="100dp"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />


        <Button
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/coctel"
            android:textStyle="italic|bold"
            android:textSize="20dp"
            android:layout_weight="1"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_marginTop="90dp"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#151515"

            />


</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/r3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/tort"
        android:textSize="20dp"
        android:textStyle="italic|bold"
        android:layout_weight="1"
        android:background="@drawable/text"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:layout_marginTop="300dp"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#151515"

        />
        <Button
            android:id="@+id/r4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="PAPAS ARRUGADAS "
            android:textSize="20dp"
            android:layout_weight="1"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_marginTop="290dp"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#151515"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
    <ImageView
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/sopa"
        android:layout_marginLeft="10dp"
        />
    <ImageView
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="25dp"
        android:src="@drawable/gamba"
        />

</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        >
        <ImageView
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="360dp"
            android:src="@drawable/tortilla2"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="360dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/papas"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/r5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/pap"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_marginTop="500dp"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#151515"

            />
        <Button
            android:id="@+id/r6"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/pan"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_marginTop="500dp"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#151515"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/r7"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="J.SERRANO"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_marginTop="700dp"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#151515"

            />
        <Button
            android:id="@+id/r8"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/aros"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_marginTop="700dp"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#151515"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="560dp"
            android:src="@drawable/locas"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="560dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/panajo"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="760dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/serrano"
            />
        <ImageView
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="760dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/aritos"
            />

    </LinearLayout>
</RelativeLayout>
</ScrollView>