<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/fondi"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ayose.comandasfina.Postre">

        <TextView
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:text="@string/postre"
            android:textColor="#4D4646"
            android:textAllCaps="true"
            android:textStyle="italic|bold"
            android:background="@drawable/text"
            android:textSize="30dp"
            android:paddingLeft="110dp"
            android:paddingTop="10dp"
            android:id="@+id/textView" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/r1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/principe"
                android:textSize="22dp"
                android:textStyle="italic|bold"
                android:textColor="#151515"
                android:layout_marginTop="90dp"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                />


            <Button
                android:id="@+id/r2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="TIRAMISU"
                android:textStyle="italic|bold"
                android:textSize="20dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="100dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/r3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="SAN MARCOS"
                android:textSize="20dp"
                android:textStyle="italic|bold"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="300dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />
            <Button
                android:id="@+id/r4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/flan"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textStyle="italic|bold"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="300dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="160dp"
                android:src="@drawable/principe"
                android:layout_marginLeft="10dp"
                />
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/tiramisu"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            >
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="360dp"
                android:src="@drawable/marcos"
                android:layout_marginLeft="10dp"
                />
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="360dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/flan"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/r5"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/mousse"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textStyle="italic|bold"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="490dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />
            <Button
                android:id="@+id/r6"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/leche"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textStyle="italic|bold"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="490dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/r7"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/tocino"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textStyle="italic|bold"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="690dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />
            <Button
                android:id="@+id/r8"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/limon"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textStyle="italic|bold"
                android:background="@drawable/text"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:layout_marginTop="690dp"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#151515"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="560dp"
                android:src="@drawable/mouse"
                android:layout_marginLeft="10dp"
                />
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="560dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/almendras"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="760dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/tocino"
                />
            <ImageView
                android:layout_width="145dp"
                android:layout_height="100dp"
                android:layout_marginTop="760dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/limsi"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>